<resources>
    <string name="app_name">TriviaGame</string>

    <string name="start_game_button">Start Game</string>
    <string name="game_info">Welcome to the Trivia game!\n\nYou\'re gonna have 10 seconds for each question. If the time is up for each questions,you\'re gonna be forwarded to the next question.\nYou have three abilities to use. Each ability is only usable once per game.\n\n- Extra time will give you 10 more seconds.\n- 50/50 will remove 2 wrong answers.\n- New question will change the current question.\n\nEnjoy.</string>
    <string name="button_extra_time_ability">Time</string>
    <string name="button_remove_wrong_answers_ability">50/50</string>
    <string name="button_another_question">Another</string>
    <string name="result_correct_answers">Correct Answers:</string>
    <string name="result_incorrect_answers">Incorrect Answers:</string>
    <string name="result_unanswered_questions">Unanswered Questions:</string>
    <string name="result_total_questions">Total Questions:</string>
    <string name="result_score_title">Score:</string>
    <string name="result_score_text">%1$s/%1$s</string>
</resources>