<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.questions.QuestionsFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:indeterminateTint="?attr/colorPrimary"
        android:indeterminate="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/timer_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:progressTint="?attr/colorPrimary"
        android:max="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/time_ability"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/spaceXSmall"
        android:layout_marginStart="?attr/spaceXLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/remove_ability"
        app:layout_constraintTop_toBottomOf="@id/timer_bar"
        android:text="@string/button_extra_time_ability"
        android:visibility="gone"
        tools:visibility="visible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/remove_ability"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/spaceXSmall"
        android:layout_marginStart="?attr/spaceMedium"
        android:layout_marginEnd="?attr/spaceMedium"
        app:layout_constraintStart_toEndOf="@id/time_ability"
        app:layout_constraintEnd_toStartOf="@id/another_ability"
        app:layout_constraintTop_toBottomOf="@id/timer_bar"
        android:text="@string/button_remove_wrong_answers_ability"
        android:visibility="gone"
        tools:visibility="visible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/another_ability"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/spaceXSmall"
        android:layout_marginEnd="?attr/spaceXLarge"
        app:layout_constraintStart_toEndOf="@id/remove_ability"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timer_bar"
        android:text="@string/button_another_question"
        android:visibility="gone"
        tools:visibility="visible"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_question_container"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="?attr/spaceXLarge"
        android:layout_marginEnd="?attr/spaceXLarge"
        android:layout_marginTop="?attr/spaceLarge"
        android:layout_marginBottom="?attr/spaceLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_ability"
        app:layout_constraintBottom_toTopOf="@id/choice_1"
        tools:text="Some questions here."
        android:visibility="gone"
        tools:visibility="visible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/choice_1"
        style="@style/BaseTheme.TriviaGame.ChoiceButtonStyle"
        app:strokeColor="?attr/colorPrimary"
        app:cornerRadius="?attr/cornerRadiusLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="?attr/spaceXLarge"
        android:layout_marginEnd="?attr/spaceMedium"
        app:layout_constraintEnd_toStartOf="@id/choice_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/choice_3"
        android:visibility="gone"
        tools:text="Choice"
        tools:visibility="visible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/choice_2"
        style="@style/BaseTheme.TriviaGame.ChoiceButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="?attr/spaceMedium"
        android:layout_marginEnd="?attr/spaceXLarge"
        app:layout_constraintStart_toEndOf="@id/choice_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/choice_4"
        android:visibility="gone"
        tools:text="Choice"
        tools:visibility="visible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/choice_3"
        style="@style/BaseTheme.TriviaGame.ChoiceButtonStyle"
        app:strokeColor="?attr/colorPrimary"
        app:cornerRadius="?attr/cornerRadiusLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="?attr/spaceXLarge"
        android:layout_marginBottom="?attr/spaceXLarge"
        android:layout_marginEnd="?attr/spaceMedium"
        app:layout_constraintEnd_toStartOf="@id/choice_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        tools:text="Choice"
        tools:visibility="visible"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/choice_4"
        style="@style/BaseTheme.TriviaGame.ChoiceButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="?attr/spaceMedium"
        android:layout_marginEnd="?attr/spaceXLarge"
        android:layout_marginBottom="?attr/spaceXLarge"
        app:layout_constraintStart_toEndOf="@id/choice_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        tools:text="Choice"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>